<resources>
    <string name="app_name">McKinley High School</string>
    <string name="bulletin">Bulletin</string>
    <string name="events">Events</string>
    <string name="lunch">Lunch</string>
    <string name="calendar">Calendar</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="goBack">Go Back</string>
    <string name="notif">Notify!</string>

    <string name="titleAboutString">Title About</string>
    <string name="titleAboutMcKinley">About McKinley High School</string>

    <string name="visionTitle">Vision Title</string>
    <string name="visiontContent">Vision Content</string>

    <string name="misionStatementTitle">Mision Statement Title</string>
    <string name="missionStatementContent">Mission Statement Content</string>

 </resources>
