<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:text="@string/app_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:gravity="bottom"
    tools:context="com.mckinleyhigh.mckinleyhighschoolapp20.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">

        <Button
            android:text="@string/lunch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/lunch" />

        <Button
            android:text="@string/bulletin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bulletin" />

        <Button
            android:text="@string/events"
            android:id="@+id/events"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.98"
        android:weightSum="3"

        >

        <Button
            android:text="@string/calendar"
            android:id="@+id/calendar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/about"
            android:id="@+id/about"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/info"
            android:id="@+id/info"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            />



    </LinearLayout>


</LinearLayout>
